syntax="proto3";

package main;


message Conatiner{
    string containerID=1;
}


message Client{
    string client=1;
}

message DockerVersion {
    string version = 1;
}


message DeploymentParams{
    string image=1;
    string client=2;
}

service DockerService {
    rpc GetDockerVersion(Client) returns (DockerVersion);
    rpc DeployImage (DeploymentParams) returns (Conatiner);
}